
2008-01-09  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #10086: Core uses deprecated function t3lib_db->sql()

2009-01-09  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10083: Constant styles.content.imgtext.separateRows is not defined

2009-01-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9194: Bug: wrong handling of 'is_in' list in TCA element type 'input' (Thanks to Vladimir Podkovanov)

2009-01-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9897: Extending palettes and fields to be displayed in back-end forms mixes up tabs
	* Added feature #9674: TCEmain changes for new improved record recycling concept (thanks to Julian Kleinhans)
	* Fixed bug #9893: Syntax error in TCA types definitions of tt_content
	* Added feature #4427: Enable stdWrap for HMENU.alwaysActivePIDlist (thanks to Dan Osipov)

2009-01-07  Francois Suter <francois@typo3.org>

	* Fixed bug #10075: Rootline cache does not work in multilingual websites

2009-01-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9374: Code in typo3/sysext/tstemplate/ts/index.php don't match with the new CGL (Thanks to Stefano Kowalke)

2009-01-05  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #10055: Add contrib directory to list of allowed paths (thanks to Dan Osipov) 
	* Fixed bug #9506: label uid shows not working 
	* Fixed bug #10056: Misspelling english word "guesbooks" 

2009-01-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9052: Remove JS popup when login expired (co-authored with Christoph Koehler and Steffen Kamper)

2009-01-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10047: typo3/contrib is not prefixed with config.absRefPrefix
	* Fixed bug #10049: ExtJS directory structure is broken

2009-01-02  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #10043: removed deprecated function-calls in openid

2009-01-01  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #4690: TCAdefaults.tt_content.imagecols = 1 is missing