@@ -1230,7 +1230,7 @@ class t3lib_TStemplate	{
 	 * @param	string		Property name in the menu array
 	 * @param	array		Menu array to traverse
 	 * @return	array		Modified menu array
-	 * @deprecated since TYPO3 4.0
+	 * @deprecated since TYPO3 3.6
 	 * @internal
 	 */
 	function checkFile($name,$menuArr)	{
