@@ -2,6 +2,7 @@
 2008-01-09  Martin Kutschker  <masi@typo3.org>
 
 	* Fixed bug #10086: Core uses deprecated function t3lib_db->sql()
+	* Fixed bug #10087: Deprecation annotations are wrong for TYPO3 3.6 and 3.5
 
 2009-01-09  Oliver Hader  <oliver@typo3.org>
 
